2020-05-13  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/95110
	* gcc.dg/tree-ssa/pr94969.c: Swap scan-tree-dump-not arguments.

2020-05-13  Marek Polacek  <polacek@redhat.com>

	* g++.dg/parse/attr4.C: Use c++11 in a target selector.

2020-05-13  Mark Eggleston  <markeggleston@gcc.gnu.org>

	PR fortran/93497
	* gfortran.dg/pr88025.f90: Change in wording of error.
	* gfortran.dg/pr93497.f90: New test.
	* gfortran.dg/pr93714_1.f90: Change in wording of errors.
	* gfortran.dg/pr93714_2.f90: Change in wording of errors.

2020-05-13  Patrick Palka  <ppalka@redhat.com>

	PR c++/70642
	* g++.dg/cpp0x/alias-decl-70.C: New test.

2020-05-13  Jakub Jelinek  <jakub@redhat.com>

	PR debug/95080
	* g++.dg/opt/pr95080.C: New test.

	PR tree-optimization/95060
	* gcc.target/i386/avx512f-pr95060.c: New test.
	* gcc.target/i386/fma_double_1.c: Adjust expected insn counts.
	* gcc.target/i386/fma_double_2.c: Likewise.
	* gcc.target/i386/fma_double_3.c: Likewise.
	* gcc.target/i386/fma_double_4.c: Likewise.
	* gcc.target/i386/fma_double_5.c: Likewise.
	* gcc.target/i386/fma_double_6.c: Likewise.
	* gcc.target/i386/fma_float_1.c: Likewise.
	* gcc.target/i386/fma_float_2.c: Likewise.
	* gcc.target/i386/fma_float_3.c: Likewise.
	* gcc.target/i386/fma_float_4.c: Likewise.
	* gcc.target/i386/fma_float_5.c: Likewise.
	* gcc.target/i386/fma_float_6.c: Likewise.
	* gcc.target/i386/l_fma_double_1.c: Likewise.
	* gcc.target/i386/l_fma_double_2.c: Likewise.
	* gcc.target/i386/l_fma_double_3.c: Likewise.
	* gcc.target/i386/l_fma_double_4.c: Likewise.
	* gcc.target/i386/l_fma_double_5.c: Likewise.
	* gcc.target/i386/l_fma_double_6.c: Likewise.
	* gcc.target/i386/l_fma_float_1.c: Likewise.
	* gcc.target/i386/l_fma_float_2.c: Likewise.
	* gcc.target/i386/l_fma_float_3.c: Likewise.
	* gcc.target/i386/l_fma_float_4.c: Likewise.
	* gcc.target/i386/l_fma_float_5.c: Likewise.
	* gcc.target/i386/l_fma_float_6.c: Likewise.

2020-05-13  Martin Liska  <mliska@suse.cz>

	PR sanitizer/95051